# mlx-contentvec

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_NOTES.md  README.md  SPEC.md  hf_model_card.md  pyproject.toml
mlx_contentvec/: __init__.py  contentvec.py  conv_feature_extraction.py  transformer_encoder.py
mlx_contentvec/modules/: __init__.py  cond_layer_norm.py  group_norm.py  multihead_attention.py
mlx_contentvec/wav2vec/: wav2vec.py
scripts/: convert_weights.py  dump_contentvec_feature.py  test_feature_comparison.py
tests/: test_conv_feature_extraction.py  test_reference_pytorch.py
