[project]
name = "contentvec-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.29.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
addopts = "-p no:hydra-pytest"
