[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contentvec-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.29.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_contentvec*"]
exclude = ["vendor*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
addopts = "-p no:hydra-pytest"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
